--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
     "explore": "gridsome explore"
   },
   "dependencies": {
+    "@gridsome/source-filesystem": "^0.6.2",
+    "@gridsome/transformer-remark": "^0.6.4",
+    "@popperjs/core": "^2.11.2",
+    "bootstrap": "^5.1.3",
     "gridsome": "^0.7.0"
-  }
+  },
+  "devDependencies": {}
 }
