--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
     "explore": "gridsome explore"
   },
   "dependencies": {
+    "@gridsome/plugin-google-analytics": "^0.1.2",
+    "@gridsome/plugin-sitemap": "^0.4.0",
     "@gridsome/source-filesystem": "^0.6.2",
     "@gridsome/transformer-remark": "^0.6.4",
-    "@popperjs/core": "^2.11.2",
-    "bootstrap": "^5.1.3",
-    "gridsome": "^0.7.0"
+    "bootstrap": "^4.3.1",
+    "bootstrap-vue": "^2.21.2",
+    "gridsome": "^0.7.23",
+    "sass": "^1.38.0",
+    "sass-loader": "7.3.1"
   },
   "devDependencies": {}
 }
